--- a/software/jukebox/configuration.example.toml
+++ b/software/jukebox/configuration.example.toml
@@ -16,48 +16,87 @@ port = 5555
 simulate = true
 
 [playback]
-# A: Techno & House
+# A/B: Techno & House
 A1 = "spotify:playlist:37i9dQZF1DX6GJXiuZRisr" # Night Rider
 A2 = "spotify:playlist:5S33MuzhWWNW57z49eBSui" # Progressive House
-A3 = "spotify:playlist:3oRNodhtGLVnZl0Q32FJHB" # Deep House
+A3 = "spotify:playlist:3oRNodhtGLVnZl0Q32FJHB" # Deep House 2020 Hits
 A4 = "spotify:playlist:37i9dQZF1DX5xiztvBdlUf" # Truely Deeply House
 A5 = "spotify:playlist:37i9dQZF1DXaXB8fQg7xif" # Dance Party
 A6 = "spotify:playlist:37i9dQZF1DXbX3zSzB4MO0" # Club Beats
 A7 = "spotify:playlist:5awU7dImY2OenjRFfN8WKD" # Happy Hardcore
 A8 = "spotify:playlist:0DIpxrBwqAhJGOe41kYrVz" # Synthwave / Retrowave
 
-# B: Chillout
-B1 = "spotify:playlist:37i9dQZF1DWTvNyxOwkztu" # Chillout Lounge
-B2 = "spotify:playlist:37i9dQZF1DX82pCGH5USnM" # Lounge - Soft House
-B3 = "spotify:playlist:37i9dQZF1DX6KItbiYYmAv" # Kaffeehausmusik
-B4 = "spotify:playlist:77vsvVJ7iWB1ySfDGh1SUP" # Acustic Covers
-B5 = "spotify:playlist:6Ph4rUXJKhOdrrKxSgK2ig" # Abient Lounge Electro
+# C/D: Chillout
+C1 = "spotify:playlist:6Ph4rUXJKhOdrrKxSgK2ig" # Lounge Electro / Downbeat House
+C2 = "spotify:playlist:37i9dQZF1DWTvNyxOwkztu" # Chillout Lounge
+C3 = "spotify:playlist:37i9dQZF1DX82pCGH5USnM" # Lounge - Soft House
+C4 = "spotify:playlist:37i9dQZF1DX6KItbiYYmAv" # Kaffeehausmusik
+C5 = "spotify:playlist:77vsvVJ7iWB1ySfDGh1SUP" # Acustic Covers
+C6 = "spotify:playlist:7BcfqemslcdlXSRbgTqkPf" # Chillout Piano
 
-# C: Country
-C1 = "spotify:playlist:37i9dQZF1DWXi7h4mmmkzD" # Country Nights
-C2 = "spotify:playlist:37i9dQZF1DX8WMG8VPSOJC" # Country kind of Love
-C3 = "spotify:playlist:37i9dQZF1DWYiR2Uqcon0X" # Country Coffehouse
-C4 = "spotify:playlist:3GZOrKmxHmGJAGCqKMd8DW" # Country Gals
-C5 = "spotify:playlist:37i9dQZF1DXdgnLr18vPvu" # Tailgate Party
-C6 = "spotify:playlist:37i9dQZF1DX8S0uQvJ4gaa" # New Boots
-C7 = "spotify:playlist:37i9dQZF1DX3Ee0ngF5ZVQ" # Texas Music
+# E/F: Country & Folk
+E1 = "spotify:playlist:37i9dQZF1DWXi7h4mmmkzD" # Country Nights
+E2 = "spotify:playlist:37i9dQZF1DX8WMG8VPSOJC" # Country kind of Love
+E3 = "spotify:playlist:37i9dQZF1DWYiR2Uqcon0X" # Country Coffehouse
+E4 = "spotify:playlist:3GZOrKmxHmGJAGCqKMd8DW" # Country Gals
+E5 = "spotify:playlist:37i9dQZF1DXdgnLr18vPvu" # Tailgate Party
+E6 = "spotify:playlist:37i9dQZF1DX8S0uQvJ4gaa" # New Boots
+E7 = "spotify:playlist:37i9dQZF1DX3Ee0ngF5ZVQ" # Texas Music
+E8 = "spotify:album:7jZMd9n6ToKKAFzMiyC7N8"    # Country Truckin'
 
-# D: Folk
-D1  = "spotify:playlist:4IfL5hySiXJXJApGRmOrfA" # Irisch / Gälisch / Keltisch
+F1 = "spotify:playlist:4IfL5hySiXJXJApGRmOrfA" # Irisch / Gälisch / Keltisch
+F2 = "spotify:playlist:3uQywS57rCK3AJTsaNLR0T" # Irish Folk Songs
+F3 = "spotify:playlist:37i9dQZF1DX2ULa1Ss8vbo" # Irish Folk Ballads
+F4 = "spotify:playlist:4r4J32OiWvUjJeC7e8Ewkn" # Irish Pub Songs
+F5 = "spotify:playlist:3XS5jNac9kVosqa8ipk9J5" # Irish Pub Jukebox
+F6 = "spotify:playlist:3ecRvUrnMsu6eW4xIA5BJJ" # Scottish Folk Songs
+F7 = "spotify:playlist:4ATFk88HxkywVOY6BSaVhg" # Scottish Accordion Dance Music
+F8 = "spotify:artist:3CufywuKIBC8WhWNvzTQr1"   # BBC Scottish Sympgony Orchestra
 
-# E: Classic
-E1 = "spotify:playlist:37i9dQZF1DWXjW0VX1e9y1" # Archangelo Corelli - Compsoer Weekly #110
-E2 = "spotify:playlist:37i9dQZF1DX4sWSpwq3LiO" # Peacful Piano
+# G/H: Künstler
+G1 = "spotify:artist:6kACVPfCOnqzgfEF5ryl0x" # Johnny Cash
+G2 = "spotify:artist:4rp8rIXbwp93MnStnqDGQD" # Andreas Gabalier
+G3 = "spotify:artist:5ISjkNS17JpCwiFtW80lpV" # Seeed
+G4 = "spotify:artist:0ddfjKqJfbSiddqOvpZRWu" # Runrig
+G5 = "spotify:artist:175a900UJkfGsIGcvUDaEx" # Pur
+G6 = "spotify:artist:7e52Ytzjj1q71DUj2cSlch" # Sarah Connor
+G7 = "spotify:artist:3gMaNLQm7D9MornNILzdSl" # Lionel Richie
+G8 = "spotify:artist:3xDVmZmDpaF1uuez2N7mKl" # Tim Bendzko
 
+H1 = "spotify:artist:5slpk6nu2IwwKx0EHe3GcL" # Lena
+H2 = "spotify:artist:7IpWQKu80qQvyer3LO6SW3" # Max Herre
+H3 = "spotify:artist:165ZgPlLkK7bf5bDoFc6Sb" # Limp Bizkit
+H4 = "spotify:artist:6XyY86QOPPrYVGvF9ch6wz" # Linkin Park
+H5 = "spotify:artist:1hJuGCUpefX24GFmss9bjH" # Amy Macdonald
+H6 = "spotify:artist:13YmWQJFwgZrd4bf5IjMY4" # Brad Paisley
+H7 = "spotify:artist:388Jc5WX2TxTOgGwXidDM7" # Schandmaul
+H8 = "spotify:playlist:37i9dQZF1DZ06evO0RQSX6" # Groove Coverage
 
+# J/K: Künstler & Jahrzehnte
+J1 = "spotify:artist:3GBPw9NK25X1Wt2OUvOwY3" # Jack Johnson
+J2 = "spotify:artist:2Kx7MNY7cI1ENniW7vT30N" # Norah Jones
+J3 = "spotify:artist:4lxfqrEsLX6N1N4OCSkILp" # Phil Collins
+J4 = "spotify:artist:4KWTAlx2RvbpseOGMEmROg" # R.E.M.
+J5 = "spotify:artist:27T030eWyCQRmDyuvr1kxY" # Scorpions
+J6 = "spotify:artist:4gIdjgLlvgEOz7MexDZzpM" # Status Quo
+J7 = "spotify:artist:0Ty63ceoRnnJKVEYP0VQpk" # Sting
+J8 = "spotify:artist:0WwSkZ7LtFUFjGjMZBMt6T" # Dire Straits
 
-# P: Radio
+K1 = "spotify:playlist:0CZdFXdaI14hzMPdhLwCBT" # All Out 40s
+K2 = "spotify:playlist:37i9dQZF1DWSV3Tk4GO2fq" # All Out 50s
+K3 = "spotify:playlist:37i9dQZF1DXaKIA8E7WcJj" # All Out 60s
+K4 = "spotify:playlist:37i9dQZF1DWTJ7xPn4vNaz" # All Out 70s
+K5 = "spotify:playlist:37i9dQZF1DX4UtSsGT1Sbe" # All Out 80s
+K6 = "spotify:playlist:37i9dQZF1DXbTxeAdrVG2l" # All Out 90s
+K7 = "spotify:playlist:37i9dQZF1DX4o1oenSJRJd" # All Out 00s
+K8 = "spotify:playlist:37i9dQZF1DX5Ejj0EkURtP" # All Out 10s
+
+# P/Q: Radio & Nachrichten
 P1 = "radio:hrinforadio"
 P2 = "radio:swr3"
 P3 = "radio:swr1"
 P4 = "radio:youfm"
 P5 = "radio:rocklandradio"
 
-# Q: Nachrichten
 Q1 = "news:tagesthemen"
 Q2 = "news:tagesschau"
