--- a/software/jukebox/configuration.example.toml
+++ b/software/jukebox/configuration.example.toml
@@ -15,22 +15,23 @@ host = "::1"
 port = 5555
 simulate = true
 
-[animation]
-A = ["flashlights", "rainbow_fast", "meter"]
-C = ["stars", "rainbow_slow"]
-E = ["green_blue_slow", "green_blue_slow"]
-F = ["green_blue_slow", "green_blue_slow"]
-G = ["stars", "rainbow_slow"]
-H = ["flashlights", "rainbow_fast"]
-J = ["stars", "green_blue_slow", "green_blue_slow"]
-K = ["stars", "green_blue_slow", "green_blue_slow"]
-P = ["off"]
-P1 = ["solid_blue"]
-P2 = ["solid_red"]
-P3 = ["solid_yellow"]
-P4 = ["rainbow_slow"]
-P5 = ["solid_yellow"]
-Q = ["solid_blue"]
+[animations]
+A = "techno"
+B = "techno"
+C = "chillout"
+D = "chillout"
+E = "country"
+F = "country"
+G = "slow"
+G = "fast"
+J = "slow"
+K = "slow"
+P1 = ["solid", "#000080"]
+P2 = ["solid", "#ff0000"]
+P3 = ["solid", "#ffff00"]
+P4 = ["solid", "#ff00ff"]
+P5 = ["solid", "#ffff00"]
+Q = ["solid", "#000080"]
 
 [playback]
 # A/B: Techno & House
