introduce configured animations

--- a/software/jukebox/configuration.example.toml
+++ b/software/jukebox/configuration.example.toml
@@ -18,14 +18,19 @@ simulate = true
 [animations]
 A = "techno"
 B = "techno"
-C = "chillout"
-D = "chillout"
+C = "slow"
+D = "slow"
 E = "country"
 F = "country"
 G = "slow"
-G = "fast"
+H = "fast"
 J = "slow"
 K = "slow"
+L = ["solid", "#000000"]
+M = ["solid", "#000000"]
+N = ["solid", "#000000"]
+O = ["solid", "#000000"]
+P = ["solid", "#000000"]
 P1 = ["solid", "#000080"]
 P2 = ["solid", "#ff0000"]
 P3 = ["solid", "#ffff00"]
