--- a/software/requirements.txt
+++ b/software/requirements.txt
@@ -4,12 +4,23 @@ attrs==19.3.0
 certifi==2019.11.28
 chardet==3.0.4
 evdev==1.3.0
+feedparser==5.2.1
 idna==2.8
+importlib-metadata==1.5.0
+more-itertools==8.2.0
 multidict==4.7.4
+packaging==20.1
+pkg-resources==0.0.0
+pluggy==0.13.1
+py==1.8.1
+pyparsing==2.4.6
+pytest==5.3.5
 requests==2.22.0
 rpi-ws281x==4.2.3
 six==1.14.0
 spotipy==2.7.1
 toml==0.10.0
 urllib3==1.25.7
+wcwidth==0.1.8
 yarl==1.4.2
+zipp==2.2.0
