--- a/software/jukebox/configuration.example.toml
+++ b/software/jukebox/configuration.example.toml
@@ -49,6 +49,16 @@ A6 = "spotify:playlist:37i9dQZF1DXbX3zSzB4MO0" # Club Beats
 A7 = "spotify:playlist:5awU7dImY2OenjRFfN8WKD" # Happy Hardcore
 A8 = "spotify:playlist:0DIpxrBwqAhJGOe41kYrVz" # Synthwave / Retrowave
 
+B1 = "youtube-dl:https://www.mixcloud.com/matthiasdamasty/denbodenglatttanzen/" # faheus - #denbodenglatttanzen
+B2 = "youtube-dl:https://www.mixcloud.com/matthiasdamasty/eurotrash-is-not-a-crime-live-at-gpn19/" # faheus - eurotrash is not a crime - live at #gpn19
+B4 = "youtube-dl:https://www.mixcloud.com/matthiasdamasty/betreutes-chillen-live-from-new-years-eve-at-36c3-teardown/" # faheus - Betreutes Chillen - Live from New Years Eve at 36c3 Teardown
+B4 = "youtube-dl:https://www.mixcloud.com/matthiasdamasty/waiting-for-breakfast-in-brown-live-from-mikrogravitation2020/" # faheus - Waiting for breakfast in brown - live from Mikrogravitation2020
+
+B5 = "youtube-dl:https://www.mixcloud.com/couchsofa/couchsofa-schall-und-raum-live-at-mikrogravitation2020/" # Couchsofa - Schall Und Raum - live at Mikrogravitation2020
+B6 = "youtube-dl:https://www.mixcloud.com/couchsofa/couchsofa-h264-aber-r%C3%BCckw%C3%A4rts-live-at-mikrogravitation2019/" # Couchsofa - H264 Aber Rückwärts - live at Mikrogravitation2019
+B7 = "youtube-dl:https://www.mixcloud.com/couchsofa/couchsofa-from-bavaria-with-love-live-at-cccamp2019/" # Couchsofa - From Bavaria With Love - live at CCCamp2019
+B8 = "youtube-dl:https://www.mixcloud.com/couchsofa/couchsofa-staubwiesenwedler-live-at-cccamp2019/" # Couchsofa - Staubwiesenwedler - live at CCCamp2019
+
 # C/D: Chillout
 C1 = "spotify:playlist:6Ph4rUXJKhOdrrKxSgK2ig" # Lounge Electro / Downbeat House
 C2 = "spotify:playlist:37i9dQZF1DWTvNyxOwkztu" # Chillout Lounge
