--- a/software/jukebox/configuration.example.toml
+++ b/software/jukebox/configuration.example.toml
@@ -126,6 +126,7 @@ K8 = "spotify:playlist:37i9dQZF1DX5Ejj0EkURtP" # All Out 10s
 
 # L/M Rock
 L1 = "spotify:playlist:2YdBr4tvSa8xX2ea4UoWUz" # Creedence Clearwater Revival
+L2 = "spotify:album:6kg3qgXaFmlXi4ik74uW7k" # Amorphis - Under the Red Cloud
 
 # P/Q: Radio & Nachrichten
 P1 = "radio:https://hr-hrinfo-live.cast.addradio.de/hr/hrinfo/live/mp3/128/stream.mp3"
