--- a/software/jukebox/configuration.example.toml
+++ b/software/jukebox/configuration.example.toml
@@ -44,7 +44,7 @@ A1 = "spotify:playlist:37i9dQZF1DX6GJXiuZRisr" # Night Rider
 A2 = "spotify:playlist:5S33MuzhWWNW57z49eBSui" # Progressive House
 A3 = "spotify:playlist:3oRNodhtGLVnZl0Q32FJHB" # Deep House 2020 Hits
 A4 = "spotify:playlist:37i9dQZF1DX5xiztvBdlUf" # Truely Deeply House
-A5 = "spotify:playlist:5M7xLCQTYJL0lbKIrUn3a4" # Electro Swing 100
+A5 = 
 A6 = "spotify:playlist:1dYAJbmobktEp59pUPeGGU" # EBM, Dark-Electro & Fututepop
 A7 = "spotify:playlist:5awU7dImY2OenjRFfN8WKD" # Happy Hardcore
 A8 = "spotify:playlist:0DIpxrBwqAhJGOe41kYrVz" # Synthwave / Retrowave
@@ -57,7 +57,7 @@ B4 = "youtube-dl:https://www.mixcloud.com/matthiasdamasty/waiting-for-breakfast-
 B5 = "youtube-dl:https://www.mixcloud.com/couchsofa/couchsofa-schall-und-raum-live-at-mikrogravitation2020/" # Couchsofa - Schall Und Raum - live at Mikrogravitation2020
 B6 = "youtube-dl:https://www.mixcloud.com/couchsofa/couchsofa-h264-aber-r%C3%BCckw%C3%A4rts-live-at-mikrogravitation2019/" # Couchsofa - H264 Aber Rückwärts - live at Mikrogravitation2019
 B7 = "youtube-dl:https://www.mixcloud.com/couchsofa/couchsofa-from-bavaria-with-love-live-at-cccamp2019/" # Couchsofa - From Bavaria With Love - live at CCCamp2019
-B8 = "youtube-dl:https://www.mixcloud.com/couchsofa/couchsofa-staubwiesenwedler-live-at-cccamp2019/" # Couchsofa - Staubwiesenwedler - live at CCCamp2019
+B8 = "spotify:album:4Ijivtrfqk2AMTF4dhrl2Q" # The Algorithm - Brute Force
 
 # C/D: Chillout
 C1 = "spotify:playlist:6Ph4rUXJKhOdrrKxSgK2ig" # Lounge Electro / Downbeat House
@@ -124,9 +124,17 @@ K6 = "spotify:playlist:37i9dQZF1DXbTxeAdrVG2l" # All Out 90s
 K7 = "spotify:playlist:37i9dQZF1DX4o1oenSJRJd" # All Out 00s
 K8 = "spotify:playlist:37i9dQZF1DX5Ejj0EkURtP" # All Out 10s
 
-# L/M Rock
+# L/M: Rock / Künstler
 L1 = "spotify:playlist:2YdBr4tvSa8xX2ea4UoWUz" # Creedence Clearwater Revival
-L2 = "spotify:album:6kg3qgXaFmlXi4ik74uW7k" # Amorphis - Under the Red Cloud
+L2 = "spotify:album:6kg3qgXaFmlXi4ik74uW7k" # Amorphis
+L3 = "spotify:album:5zylhCTCHQstRpSU47BEiw" # Madrugada
+L4 = "spotify:artist:61YE3whKiuRr83j1yOm5M7" # Augustana
+
+
+
+# N/O: Swing
+N1 = "spotify:playlist:5M7xLCQTYJL0lbKIrUn3a4" # Electro Swing 100
+N2 = "spotify:artist:65EXuYHVoehCKqp0kOS6px" # Parov Stelar
 
 # P/Q: Radio & Nachrichten
 P1 = "radio:https://hr-hrinfo-live.cast.addradio.de/hr/hrinfo/live/mp3/128/stream.mp3"
