--- a/software/jukebox/configuration.example.toml
+++ b/software/jukebox/configuration.example.toml
@@ -44,7 +44,7 @@ A1 = "spotify:playlist:37i9dQZF1DX6GJXiuZRisr" # Night Rider
 A2 = "spotify:playlist:5S33MuzhWWNW57z49eBSui" # Progressive House
 A3 = "spotify:playlist:3oRNodhtGLVnZl0Q32FJHB" # Deep House 2020 Hits
 A4 = "spotify:playlist:37i9dQZF1DX5xiztvBdlUf" # Truely Deeply House
-A5 = 
+A5 = "spotify:album:4Ijivtrfqk2AMTF4dhrl2Q" # The Algorithm - Brute Force
 A6 = "spotify:playlist:1dYAJbmobktEp59pUPeGGU" # EBM, Dark-Electro & Fututepop
 A7 = "spotify:playlist:5awU7dImY2OenjRFfN8WKD" # Happy Hardcore
 A8 = "spotify:playlist:0DIpxrBwqAhJGOe41kYrVz" # Synthwave / Retrowave
@@ -57,7 +57,7 @@ B4 = "youtube-dl:https://www.mixcloud.com/matthiasdamasty/waiting-for-breakfast-
 B5 = "youtube-dl:https://www.mixcloud.com/couchsofa/couchsofa-schall-und-raum-live-at-mikrogravitation2020/" # Couchsofa - Schall Und Raum - live at Mikrogravitation2020
 B6 = "youtube-dl:https://www.mixcloud.com/couchsofa/couchsofa-h264-aber-r%C3%BCckw%C3%A4rts-live-at-mikrogravitation2019/" # Couchsofa - H264 Aber Rückwärts - live at Mikrogravitation2019
 B7 = "youtube-dl:https://www.mixcloud.com/couchsofa/couchsofa-from-bavaria-with-love-live-at-cccamp2019/" # Couchsofa - From Bavaria With Love - live at CCCamp2019
-B8 = "spotify:album:4Ijivtrfqk2AMTF4dhrl2Q" # The Algorithm - Brute Force
+B8 = "youtube-dl:https://www.mixcloud.com/couchsofa/couchsofa-staubwiesenwedler-live-at-cccamp2019/" # Couchsofa - Staubwiesenwedler - live at CCCamp2019
 
 # C/D: Chillout
 C1 = "spotify:playlist:6Ph4rUXJKhOdrrKxSgK2ig" # Lounge Electro / Downbeat House
