--- a/config/device-tree-overlay/jukebox.dts
+++ b/config/device-tree-overlay/jukebox.dts
@@ -249,4 +249,33 @@
 			};
 		};
 	};
+
+
+	fragment@3 {
+		target-path = "/soc/gpio";
+		__overlay__ {
+			knob_pins: knob_pins {
+				brcm,pins = <14 15>;
+				brcm,function = <0>;
+				brcm,pull = <2>;
+			};
+		};
+	};
+
+
+	fragment@4 {
+		target-path = "/soc";
+		__overlay__ {
+			knob: knob {
+				compatible = "rotary-encoder";
+				#address-cells = <1>;
+				#size-cells = <0>;
+				pinctrl-names = "default";
+				pinctrl-0 = <&knob_pins>;
+				gpios = <&gpio 14 1>, <&gpio 15 1>; 
+				linux,axis = <9>; /* REL_MISC */
+				rotary-encoder,relative-axis;
+			};
+		};
+	};
 };
