--- a/software/requirements.txt
+++ b/software/requirements.txt
@@ -13,6 +13,7 @@ packaging==20.1
 pkg-resources==0.0.0
 pluggy==0.13.1
 py==1.8.1
+pyalsaaudio==0.9.0
 pyparsing==2.4.6
 pytest==5.3.5
 requests==2.22.0
