--- a/software/jukebox/configuration.example.toml
+++ b/software/jukebox/configuration.example.toml
@@ -7,8 +7,8 @@ device_name = "Jukebox"
 
 [panel]
 input_device_name = "panel_keys"
-timeout_minutes = 1
-simulate = true
+timeout_minutes = 10
+simulate = false
 
 [volume]
 input_device_name = "volume_knob"
@@ -58,7 +58,7 @@ P5 = ["solid", "#ffff00"]
 Q = ["solid", "#000080"]
 
 [playback]
-# A/B: Techno & House
+# A/B: House & Chillout
 A1 = "spotify:playlist:37i9dQZF1DX6GJXiuZRisr" # Night Rider
 A2 = "spotify:playlist:5S33MuzhWWNW57z49eBSui" # Progressive House
 A3 = "spotify:playlist:3oRNodhtGLVnZl0Q32FJHB" # Deep House 2020 Hits
@@ -68,32 +68,47 @@ A6 = "spotify:playlist:1dYAJbmobktEp59pUPeGGU" # EBM, Dark-Electro & Fututepop
 A7 = "spotify:playlist:5awU7dImY2OenjRFfN8WKD" # Happy Hardcore
 A8 = "spotify:playlist:0DIpxrBwqAhJGOe41kYrVz" # Synthwave / Retrowave
 
-B1 = "youtube-dl:https://www.mixcloud.com/matthiasdamasty/denbodenglatttanzen/" # faheus - #denbodenglatttanzen
-B2 = "youtube-dl:https://www.mixcloud.com/matthiasdamasty/eurotrash-is-not-a-crime-live-at-gpn19/" # faheus - eurotrash is not a crime - live at #gpn19
-B3 = "youtube-dl:https://www.mixcloud.com/matthiasdamasty/betreutes-chillen-live-from-new-years-eve-at-36c3-teardown/" # faheus - Betreutes Chillen - Live from New Years Eve at 36c3 Teardown
-B4 = "youtube-dl:https://www.mixcloud.com/matthiasdamasty/waiting-for-breakfast-in-brown-live-from-mikrogravitation2020/" # faheus - Waiting for breakfast in brown - live from Mikrogravitation2020
+B1 = "spotify:playlist:6Ph4rUXJKhOdrrKxSgK2ig" # Lounge Electro / Downbeat House
+B2 = "spotify:playlist:37i9dQZF1DWTvNyxOwkztu" # Chillout Lounge
+B3 = "spotify:playlist:37i9dQZF1DX82pCGH5USnM" # Lounge - Soft House
 
-B5 = "youtube-dl:https://www.mixcloud.com/couchsofa/couchsofa-schall-und-raum-live-at-mikrogravitation2020/" # Couchsofa - Schall Und Raum - live at Mikrogravitation2020
-B6 = "youtube-dl:https://www.mixcloud.com/couchsofa/couchsofa-h264-aber-r%C3%BCckw%C3%A4rts-live-at-mikrogravitation2019/" # Couchsofa - H264 Aber Rückwärts - live at Mikrogravitation2019
-B7 = "youtube-dl:https://www.mixcloud.com/couchsofa/couchsofa-from-bavaria-with-love-live-at-cccamp2019/" # Couchsofa - From Bavaria With Love - live at CCCamp2019
-B8 = "youtube-dl:https://www.mixcloud.com/couchsofa/couchsofa-staubwiesenwedler-live-at-cccamp2019/" # Couchsofa - Staubwiesenwedler - live at CCCamp2019
+B4 = "spotify:playlist:37i9dQZF1DX6KItbiYYmAv" # Kaffeehausmusik
+B5 = "spotify:playlist:77vsvVJ7iWB1ySfDGh1SUP" # Acustic Covers
+B6 = "spotify:playlist:7BcfqemslcdlXSRbgTqkPf" # Chillout Piano
+B7 = "spotify:artist:2lVC2nWo4KJE4p6EySdfkL"   # Toco - Samba
+B8 = "spotify:album:3pjbc9osODpEtK1KiD2Mar"    # Samba Chill Out
 
-# C/D: Chillout
-C1 = "spotify:playlist:6Ph4rUXJKhOdrrKxSgK2ig" # Lounge Electro / Downbeat House
-C2 = "spotify:playlist:37i9dQZF1DWTvNyxOwkztu" # Chillout Lounge
-C3 = "spotify:playlist:37i9dQZF1DX82pCGH5USnM" # Lounge - Soft House
-C4 = "spotify:playlist:37i9dQZF1DX6KItbiYYmAv" # Kaffeehausmusik
-C5 = "spotify:playlist:77vsvVJ7iWB1ySfDGh1SUP" # Acustic Covers
-C6 = "spotify:playlist:7BcfqemslcdlXSRbgTqkPf" # Chillout Piano
-C7 = "spotify:artist:2lVC2nWo4KJE4p6EySdfkL"   # Toco - Samba
-C8 = "spotify:album:3pjbc9osODpEtK1KiD2Mar"    # Samba Chill Out
+# C/D: Kinder & Seasonal
+C1 = "spotify:playlist:1u0bu4ezkj4QHDkfjXwKsW" # Kinderlieder zum Mitsingen
+C2 = "spotify:album:38fU1VW61DMdWabqL8psOZ" # Rolf Zukowski - Im Kindergarten
+C3 = "spotify:album:6nlW6lZrQ5BO5WEFPGJGOE" # Rolf Zukowski - Der Spielmann
+C4 = "spotify:album:01JrN7TzqiE7Vs1JNJ3Mkl" # Rolfs Vogehochzeit
+C5 = "spotify:playlist:1YG7deML4ygSwz22AZAnO0" # Feuerwehrmann Sam
+C6 = "spotify:playlist:1W6xzRMKglSHln10RHiv9i" # Paw Patrol
+C7 = "spotify:album:47aRuXd0uflQQQL5xwFV9Y" # Die Eule mit der Beule
+C8 = "spotify:album:3akjJKK96nen3MadP1M7Rr" # Bobo Siebenschläfer. Großer Sommerspaß.
 
-D1 = "spotify:playlist:1u0bu4ezkj4QHDkfjXwKsW" # Kinderlieder zum Mitsingen
-D2 = "spotify:playlist:37i9dQZF1DXe2dJQTHQvBA" # Rolf Zukowski Best Of
+## Karneval
+#D3 = "spotify:playlist:325PoeLANQidESnexhSYZN" # Mainzer Karneval
+#D4 = "spotify:playlist:2QG1qW45MV68jMsgJxexCA" # Kölner Karneval
+#D5 = "spotify:playlist:6CJq5MiWjsrO4pu7DjCKj1" # Kinderkarneval
+#D6 = "spotify:album:2bEfWieCBh1QhQZE8waUqn"    # Karneval-Hits 2015
+#D7 = "spotify:playlist:2LLaixV9lm14M58nFbjIhX" # Karneval 70s/80s/90s
+#D8 = "spotify:artist:3M7ei5iWVXuxJruRncAxUX"   # Black Fööss
+
+## Weihnachten
+D1 = "spotify:playlist:79zrdgOFGOSXtxHprgY7Xt" # Weihnachten mit Rolf Zukowski
+D2 = "spotify:album:3pNMZlfhtGExgYvs1J4qF6" # Kinder Weihnachten
+D3 = "spotify:album:1jHwHrbxjMXaP35UuygzQX" # Der Pianist - Klassische Weihnachten
+D4 = "spotify:album:5NA85qrV1WmNNbNZJ0ORW2" # Moderne Weihnachtslieder
+D5 = "spotify:playlist:37i9dQZF1DX0MuOvUqmxDz" # Country Christmas
+D6 = "spotify:playlist:37i9dQZF1DWZv6UE8BMPO0" # Christmas Cocktail Jazz
+D7 = "spotify:playlist:37i9dQZF1DX5kHh3pKWrss" # Weihnachten Instrumental
+D8 = "spotify:album:5stoW92sMwLYf0WxOgEa16" # Rock Christmas
 
 # E/F: Country & Folk
 E1 = "spotify:playlist:37i9dQZF1DWXi7h4mmmkzD" # Country Nights
-E2 = "spotify:playlist:37i9dQZF1DX8WMG8VPSOJC" # Country kind of Love
+E2 = "spotify:artist:06HL4z0CvFAxyc27GXpf02" # Taylor Swift
 E3 = "spotify:playlist:37i9dQZF1DWYiR2Uqcon0X" # Country Coffehouse
 E4 = "spotify:playlist:3GZOrKmxHmGJAGCqKMd8DW" # Country Gals
 E5 = "spotify:playlist:37i9dQZF1DXdgnLr18vPvu" # Tailgate Party
@@ -105,10 +120,10 @@ F1 = "spotify:playlist:4IfL5hySiXJXJApGRmOrfA" # Irisch / Gälisch / Keltisch
 F2 = "spotify:playlist:3uQywS57rCK3AJTsaNLR0T" # Irish Folk Songs
 F3 = "spotify:playlist:37i9dQZF1DX2ULa1Ss8vbo" # Irish Folk Ballads
 F4 = "spotify:playlist:4r4J32OiWvUjJeC7e8Ewkn" # Irish Pub Songs
-F5 = "spotify:playlist:3XS5jNac9kVosqa8ipk9J5" # Irish Pub Jukebox
-F6 = "spotify:playlist:3ecRvUrnMsu6eW4xIA5BJJ" # Scottish Folk Songs
-F7 = "spotify:playlist:4ATFk88HxkywVOY6BSaVhg" # Scottish Accordion Dance Music
-F8 = "spotify:artist:3CufywuKIBC8WhWNvzTQr1"   # BBC Scottish Sympgony Orchestra
+F5 = "spotify:playlist:3ecRvUrnMsu6eW4xIA5BJJ" # Scottish Folk Songs
+F6 = "spotify:playlist:4ATFk88HxkywVOY6BSaVhg" # Scottish Accordion Dance Music
+F7 = "spotify:playlist:41Oz76GyQu7f10gfVLfnk9" # Dancehall / Reggaeton
+F8 = "spotify:playlist:6RMoIh0N6NPokXLKV6AyUX" # Dancehall Classics
 
 # G/H: Künstler
 G1 = "spotify:artist:6kACVPfCOnqzgfEF5ryl0x" # Johnny Cash
@@ -126,8 +141,8 @@ H3 = "spotify:artist:7uhvDINTTiD0XBrP9fquN1" # The Hooters
 H4 = "spotify:artist:6XyY86QOPPrYVGvF9ch6wz" # Linkin Park
 H5 = "spotify:artist:1hJuGCUpefX24GFmss9bjH" # Amy Macdonald
 H6 = "spotify:artist:13YmWQJFwgZrd4bf5IjMY4" # Brad Paisley
-H7 = "spotify:artist:388Jc5WX2TxTOgGwXidDM7" # Schandmaul
-H8 = "spotify:playlist:37i9dQZF1DZ06evO0RQSX6" # Groove Coverage
+H7 = "spotify:artist:5WUlDfRSoLAfcVSX1WnrxN" # Sia
+H8 = "spotify:artist:6qt7HAbdjQ4a2B0sYAjySO" # Ton Steine Scherben
 
 # J/K: Künstler & Jahrzehnte
 J1 = "spotify:artist:3GBPw9NK25X1Wt2OUvOwY3" # Jack Johnson
@@ -145,23 +160,23 @@ K3 = "spotify:playlist:37i9dQZF1DXaKIA8E7WcJj" # All Out 60s
 K4 = "spotify:playlist:37i9dQZF1DWTJ7xPn4vNaz" # All Out 70s
 K5 = "spotify:playlist:37i9dQZF1DX4UtSsGT1Sbe" # All Out 80s
 K6 = "spotify:playlist:37i9dQZF1DXbTxeAdrVG2l" # All Out 90s
-K7 = "spotify:playlist:37i9dQZF1DX4o1oenSJRJd" # All Out 00s
-K8 = "spotify:playlist:37i9dQZF1DX5Ejj0EkURtP" # All Out 10s
+K7 = "spotify:playlist:37i9dQZF1DWWnpcjfCqaW0" # 50s Country
+K8 = "spotify:playlist:37i9dQZF1DX7CGYgLhqwu5" # 60s Country
 
 # L/M: Rock & Punk Rock
 L1 = "spotify:playlist:2YdBr4tvSa8xX2ea4UoWUz" # Creedence Clearwater Revival
-L2 = "spotify:album:6kg3qgXaFmlXi4ik74uW7k" # Amorphis
-L3 = "spotify:album:5zylhCTCHQstRpSU47BEiw" # Madrugada
+L2 = "spotify:artist:6FBDaR13swtiWwGhX1WQsP" # blink-182
+L3 = "spotify:artist:0iC8O5ABswVUFiYwM94bu3" # Madrugada
 L4 = "spotify:artist:61YE3whKiuRr83j1yOm5M7" # Augustana
 L5 = "spotify:artist:7oPftvlwr6VrsViSDV7fJY" # Green Day
-L6 = "spotify:artist:08yf5A2nS4XEeNvabDXqyg" # The Offspring
+L6 = "spotify:artist:08yf5A2nS4XEeNvabDXqyg" # Billy Talent
 L7 = "spotify:artist:2p4FqHnazRucYQHyDCdBrJ" # Simple Plan
 L8 = "spotify:artist:3Ayl7mCk0nScecqOzvNp6s" # Jimmy Eat World
 
 M1 = "spotify:playlist:37i9dQZF1DXaQ34lqGBfrU" # Pink Floyd
 M2 = "spotify:artist:22WZ7M8sxp5THdruNY3gXt" # The Doors
 M3 = "spotify:artist:3vAaWhdBR38Q02ohXqaNHT" # The All-American Reject
-M4 = "spotify:artist:30sqtiTKIb1oDve0SdYayT" # Anti Flag
+M4 = "spotify:artist:6XyY86QOPPrYVGvF9ch6wz" # Linkin Park
 M5 = "spotify:artist:6Wr3hh341P84m3EI8qdn9O" # Rise Against
 M6 = "spotify:artist:7FBcuc1gsnv6Y1nwFtNRCb" # My Chemical Romance
 M7 = "spotify:artist:6mdiAmATAx73kdxrNrnlao" # Iron Maiden
@@ -169,7 +184,7 @@ M8 = "spotify:artist:2ye2Wgw4gimLv2eAKyk1NB" # Metallica
 
 # N/O: Swing, Jazz, Blues
 N1 = "spotify:playlist:37i9dQZF1DWYotlhbgVGaH" # Swing Revival
-N2 = "spotify:playlist:16aOw456cLyMMRg1WFsYDy" # Charsleton - Swing - Jazz
+N2 = "spotify:playlist:16aOw456cLyMMRg1WFsYDy" # Charsleton / Swing / Jazz
 N3 = "spotify:playlist:37i9dQZF1DXdDe8IDhRIo5" # Gypsy Swing
 N4 = "spotify:playlist:4pQrymxnlsus5rHhkX84fc" # Swingin' Saxophones
 
@@ -180,7 +195,7 @@ N8 = "spotify:playlist:3hhSBDksTzJjBEnIaJj1gq" # Dark Electro Swing
 
 O1 = "spotify:playlist:37i9dQZF1DWU6MDxlH7Sr1" # Happy Jazz!
 O2 = "spotify:playlist:37i9dQZF1DX0SM0LYsmbMT" # Jazz Vibes
-O3 = "spotify:playlist:37i9dQZF1DX55dNU0PWnO5" # Jazztronica
+O3 = "spotify:playlist:37i9dQZF1DZ06evNZZmaDC" # Gregory Porter
 O4 = "spotify:playlist:37i9dQZF1DX5OepaGriAIm" # Women of Jazz
 
 O5 = "spotify:playlist:37i9dQZF1DXd9rSDyQguIk" # Blues Classics
