--- a/software/requirements.txt
+++ b/software/requirements.txt
@@ -1,28 +1,8 @@
-aiohttp==3.10.2
-async-timeout==3.0.1
-attrs==19.3.0
-certifi==2024.7.4
-chardet==3.0.4
-evdev==1.3.0
-feedparser==5.2.1
-idna==3.7
-importlib-metadata==1.5.0
-more-itertools==8.2.0
-multidict==4.7.4
-packaging==20.1
-pkg-resources==0.0.0
-pluggy==0.13.1
-py==1.10.0
-pyalsaaudio==0.9.0
-pyparsing==2.4.6
-pytest==5.3.5
-requests==2.32.2
-rpi-ws281x==4.2.3
-six==1.14.0
-spotipy==2.22.1
-toml==0.10.0
-urllib3==1.26.19
-wcwidth==0.1.8
-yarl==1.4.2
-youtube-dl==2020.2.16
-zipp==3.19.1
+aiohttp~=3.10.10
+evdev~=1.7.1
+feedparser~=6.0.11
+multidict~=6.1.0
+pyalsaaudio==0.11.0
+requests~=2.32.3
+rpi-ws281x~=5.0.0
+spotipy~=2.24.0
